--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -256,7 +256,7 @@
 					display: block;
 					width: 125px;
 					height: 40px;
-					margin: 0px auto 5px;
+					margin: 0px 3px 5px;
 
 					&:last-child {
 						margin-bottom: 0px;
@@ -356,7 +356,7 @@
 				}
 
 				&:nth-of-type(4),&:nth-of-type(5),&:nth-of-type(6) {
-					min-width: 130px;
+					width: 1%;
 				}
 				&:nth-of-type(7) {
 					min-width: 50px;
@@ -2144,45 +2144,35 @@
 	height: auto;
 	margin: 2% auto 0px;
 	border-radius: 3px;
-	border: solid 1px #cacaca;
+	border: solid 1px #777777;
 	
 	tr {
 		text-align: center;
 
 		&:nth-of-type(1) {
-			background: #505050;
-
-			td {
-
-				&:nth-of-type(2) {
-					background: #3c7424;
-				}
-			}
+			background: #353535;
 		}
 
 		&:nth-of-type(2) {
-			background: #3d3d3d;
-
-			td {
-
-				&:nth-of-type(1) {
-					background: #304880;
-				}
-			}
+			background: #282828;
 		}
 
 		td {
 			vertical-align: middle;
-			border: solid 1px #8f8f8f;
+			border: solid 1px #828282;
 			height: 45px;
 			width: 7%;
 			font-size: 13px;
 			line-height: 15px;
-			color: #ababab;
+			color: #c3c3c3;
 
 			&.title {
 				width: 9%;
-				background: #505050;
+				background: #282828;
+			}
+
+			&:nth-of-type(2) {
+				color: #f6f6f6;
 			}
 		}
 	}
@@ -2193,22 +2183,22 @@
 	width: 100%;
 	height: auto;
 	border-collapse: collapse;
-	background: #505050;
+	background: #303030;
 
 	tr {
 
 		th {
 			padding: 7px 15px;
-			color: #fff;
+			color: #e1e1e1;
 			font-size: 13px;
-			border-bottom: solid 1px #ababab;
+			border-bottom: solid 1px #686868;
 			text-align: left;
 		}
 
 		td {
 			width: 50%;
 			vertical-align: middle;
-			color: #fff;
+			color: #b0b0b0;
 			padding: 15px;
 			font-size: 13px;
 
@@ -2217,12 +2207,12 @@
 
 				.odds {
 					margin-left: 5px;
-					color: #ff0000;
+					color: #ee2626;
 				}
 			}
 
 			&:last-child {
-				border-left: solid 1px #ababab;
+				border-left: solid 1px #626262;
 				line-height: 18px;
 			}
 		}
